<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >
    <data>
        <variable
            name="vm"
            type="org.deepspeechdemo.DSViewModel"
            />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ready"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transcription"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{vm.transcription}"
            tools:text="@string/spoken_text_will_appear_here"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/record_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=
                "@{vm.running ? @string/button_stop_recording : @string/button_start_recording }"
            tools:text="@string/button_start_recording"
            />
    </LinearLayout>
</layout>
