<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DeepIMEService"
    >
    <data>
        <variable
            name="vm"
            type="org.deepspeechdemo.DSViewModel"
            />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        android:padding="@android:dimen/app_icon_size"
        >
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="3"
            tools:ignore="UselessParent"
            >
            <ImageButton
                android:id="@+id/settings_button"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_baseline_settings_24"
                style="@style/KeyboardButton"
                />
            <Button
                android:id="@+id/record_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=
                    "@{vm.running ? @string/button_stop_recording : @string/button_start_recording}"
                tools:text="@string/button_start_recording"
                />
            <ImageButton
                android:id="@+id/backspace_button"
                android:contentDescription="@string/backspace"
                android:src="@drawable/ic_baseline_backspace_24"
                style="@style/KeyboardButton"
                />
            <ImageButton
                android:id="@+id/switch_ime_button"
                android:contentDescription="@string/backspace"
                android:src="@drawable/ic_baseline_language_24"
                style="@style/KeyboardButton"
                />
            <ImageButton
                android:id="@+id/spacebar_button"
                android:contentDescription="@string/spacebar"
                android:src="@drawable/ic_baseline_space_bar_24"
                style="@style/KeyboardButton"
                />
            <ImageButton
                android:id="@+id/enter_button"
                android:contentDescription="@string/return_enter"
                android:src="@drawable/ic_baseline_keyboard_return_24"
                style="@style/KeyboardButton"
                />
        </GridLayout>
    </FrameLayout>
</layout>
