<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoadFilesActivity"
    >
    <data>
        <variable
            name="vm"
            type="org.deepspeechdemo.LoadFilesViewModel"
            />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="16dp"
        android:minHeight="?android:attr/listPreferredItemHeight"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/load_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/load_description"
            />
        <include
            android:id="@+id/model_file_list_item"
            layout="@layout/two_line_item"
            bind:title="@{@string/file_model}"
            />
        <include
            android:id="@+id/scorer_file_list_item"
            layout="@layout/two_line_item"
            bind:title="@{@string/file_scorer}"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="16dp"
            android:text="@{vm.nextIsDone ? @string/button_done : @string/button_next}"
            tools:text="@string/button_next"
            />
    </LinearLayout>
</layout>
